--- a/package.json
+++ b/package.json
@@ -13,6 +13,7 @@
     "@testing-library/user-event": "^12.8.3",
     "axios": "^0.21.1",
     "chart.js": "^3.5.1",
+    "chat-ui-react": "^0.2.14",
     "jss-rtl": "^0.3.0",
     "query-string": "^7.0.1",
     "react": "^17.0.2",
